// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PaymentPage /> Renders correctly in various states should render a free basket 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              className="row align-items-center mb-3"
            >
              <div
                className="col-5"
              >
                <div
                  className="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    className="img-thumbnail product-thumbnail"
                    src="https://edx.org/po.jpg"
                  />
                </div>
              </div>
              <div
                className="col-7"
              >
                <h6
                  aria-level="3"
                  className="m-0"
                >
                  Introduction to Dogs
                </h6>
                <p
                  className="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            className="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              className="summary-row d-flex"
            >
              <span
                className="flex-grow-1"
              >
                Price
              </span>
              <span>
                $103.07
              </span>
            </div>
            <div
              className="summary-row font-weight-bold d-flex"
            >
              <span
                className="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                className="text-right"
              >
                $103.07
              </span>
            </div>
          </div>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <a
          className="pgn__hyperlink default-link standalone-link btn btn-primary btn-lg"
          href="http://localhost:18130/checkout/free-checkout/"
          onClick={[Function]}
          target="_self"
        >
          Place Order
        </a>
      </section>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render a redirect spinner 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div>
    <div
      className="d-flex justify-content-center align-items-center flex-column"
      style={
        Object {
          "height": "50vh",
        }
      }
    >
      <div
        className="spinner-border text-primary"
        role="status"
      >
        <span
          className="sr-only"
        >
          Loading basket...
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render an empty basket 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="card"
  >
    <div
      className="card-body"
    >
      <h5
        className="card-title"
      >
        Your basket is empty.
      </h5>
      <p
        className="card-text"
      >
        Array [
          "If you attempted to make a purchase, you have not been charged. Return to your ",
          <a
            className="pgn__hyperlink default-link standalone-link"
            href="http://localhost:18000"
            onClick={[Function]}
            target="_self"
          >
            dashboard
          </a>,
          " to try again, or ",
          <a
            className="pgn__hyperlink default-link standalone-link"
            href="http://localhost:18000/support"
            onClick={[Function]}
            target="_self"
          >
            contact edX E-commerce Support
          </a>,
          ".",
        ]
      </p>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render its default (loading) state 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Loading, please wait...
          </span>
          <div
            className="skeleton py-2 mb-3 w-50"
          />
          <div
            className="skeleton py-2 mb-4 mr-4"
          />
          <div
            className="row align-items-center mb-5"
          >
            <div
              className="col-5"
            >
              <div
                className="skeleton embed-responsive embed-responsive-16by9"
              />
            </div>
            <div
              className="col-7"
            >
              <div
                className="skeleton py-2 mb-3 w-50"
              />
              <div
                className="skeleton py-2 mr-4"
              />
            </div>
          </div>
          <div
            className="skeleton py-2 mb-3 w-50"
          />
          <div
            className="skeleton py-2 mb-2"
          />
          <div
            className="skeleton py-2 mb-5"
          />
          <div
            className="skeleton py-2 mb-3 w-50"
          />
          <div
            className="skeleton py-2 mb-2 mr-4"
          />
          <div
            className="skeleton py-2 mb-5 w-75"
          />
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <div
          className="basket-section"
        >
          <h5
            aria-level="2"
          >
            Select Payment Method
          </h5>
          <p
            className="d-flex flex-wrap"
          >
            <button
              className="payment-method-button active"
              type="button"
            >
              <img
                alt="Credit Card"
                src="test-file-stub"
              />
            </button>
            <button
              className="payment-method-button skeleton-pulse"
              disabled={true}
              onClick={[Function]}
              type="button"
            >
              <img
                alt="PayPal"
                src="test-file-stub"
              />
            </button>
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              className="row align-items-center mb-3"
            >
              <div
                className="col-5"
              >
                <div
                  className="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    className="img-thumbnail product-thumbnail"
                    src="https://edx.org/vot.png"
                  />
                </div>
              </div>
              <div
                className="col-7"
              >
                <h6
                  aria-level="3"
                  className="m-0"
                >
                  Introduction to Llamass
                </h6>
                <p
                  className="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            className="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              className="summary-row d-flex"
            >
              <span
                className="flex-grow-1"
              >
                Price
              </span>
              <span>
                $464.88
              </span>
            </div>
            <div
              className="summary-row font-weight-bold d-flex"
            >
              <span
                className="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                className="text-right"
              >
                $464.88
              </span>
            </div>
          </div>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <div
          className="basket-section"
        >
          <h5
            aria-level="2"
          >
            Select Payment Method
          </h5>
          <p
            className="d-flex flex-wrap"
          >
            <button
              className="payment-method-button active"
              type="button"
            >
              <img
                alt="Credit Card"
                src="test-file-stub"
              />
            </button>
            <button
              className="payment-method-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt="PayPal"
                src="test-file-stub"
              />
            </button>
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket for a bulk order 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              className="row align-items-center mb-3"
            >
              <div
                className="col-5"
              >
                <div
                  className="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    className="img-thumbnail product-thumbnail"
                    src="https://edx.org/lu.jpg"
                  />
                </div>
              </div>
              <div
                className="col-7"
              >
                <h6
                  aria-level="3"
                  className="m-0"
                >
                  Introduction to Guanacos
                </h6>
                <p
                  className="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
            <form
              className="summary-row form-inline"
              onSubmit={[Function]}
            >
              <div
                className="form-group mr-2"
              >
                <label
                  htmlFor="code-quantity"
                >
                  Quantity
                </label>
                <div
                  className="position-relative"
                >
                  <input
                    className="form-control form-control-sm"
                    defaultValue={1}
                    id="code-quantity"
                    max="100"
                    min="1"
                    name="code-quantity"
                    style={
                      Object {
                        "width": "5rem",
                      }
                    }
                    type="number"
                  />
                  <small
                    className="text-muted small"
                    style={
                      Object {
                        "left": 0,
                        "position": "absolute",
                        "top": "100%",
                      }
                    }
                  >
                    Max: 100
                  </small>
                </div>
              </div>
              <button
                aria-disabled={false}
                aria-live="assertive"
                className="pgn__stateful-btn pgn__stateful-btn-state-default btn btn-primary btn-sm"
                disabled={false}
                onClick={[Function]}
                type="submit"
              >
                <span
                  className="d-flex align-items-center justify-content-center"
                >
                  <span>
                    Update
                  </span>
                </span>
              </button>
            </form>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            className="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              className="summary-row"
            >
              <table
                className="w-100"
              >
                <thead>
                  <tr>
                    <th
                      className="font-weight-normal"
                    >
                      Price
                    </th>
                    <th
                      className="font-weight-normal"
                    >
                      Quantity
                    </th>
                    <th
                      className="font-weight-normal text-right"
                    >
                      Subtotal
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      $66.22
                    </td>
                    <td>
                      1
                    </td>
                    <td
                      className="text-right"
                    >
                      $66.22
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
            <div
              className="summary-row font-weight-bold d-flex"
            >
              <span
                className="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                className="text-right"
              >
                $66.22
              </span>
            </div>
          </div>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              By purchasing, you and your organization agree to the following terms:
            </p>
            <ul>
              <li>
                Each code is valid for the one course covered and can be used only one time.
              </li>
              <li>
                You are responsible for distributing codes to your learners in your organization.
              </li>
              <li>
                Each code will expire in one year from date of purchase or, if earlier, once the course is closed.
              </li>
              <li>
                If a course is not designated as self-paced, you should confirm that a course run is available before expiration.
              </li>
              <li>
                You may not resell codes to third parties.
              </li>
              <li>
                All edX for Business sales are final and not eligible for refunds.
              </li>
            </ul>
            <p>
              You will receive an email at person@edx.org with your enrollment code(s).
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <div
          className="basket-section"
        >
          <h5
            aria-level="2"
          >
            Select Payment Method
          </h5>
          <p
            className="d-flex flex-wrap"
          >
            <button
              className="payment-method-button active"
              type="button"
            >
              <img
                alt="Credit Card"
                src="test-file-stub"
              />
            </button>
            <button
              className="payment-method-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt="PayPal"
                src="test-file-stub"
              />
            </button>
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket in a different currency 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              className="row align-items-center mb-3"
            >
              <div
                className="col-5"
              >
                <div
                  className="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    className="img-thumbnail product-thumbnail"
                    src="https://edx.org/watpewal.gif"
                  />
                </div>
              </div>
              <div
                className="col-7"
              >
                <h6
                  aria-level="3"
                  className="m-0"
                >
                  Introduction to Pigeonss
                </h6>
                <p
                  className="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            className="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              className="summary-row d-flex"
            >
              <span
                className="flex-grow-1"
              >
                Price
              </span>
              <span>
                <span>
                  MX$8,500
                   *
                </span>
              </span>
            </div>
            <div
              className="summary-row font-weight-bold d-flex"
            >
              <span
                className="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                className="text-right"
              >
                <span>
                  MX$8,500
                   *
                </span>
              </span>
            </div>
            <div
              className="text-muted font-italic"
            >
              Array [
                "* This total contains an approximate conversion. You will be charged ",
                "$445.19",
                " USD.",
              ]
            </div>
          </div>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <div
          className="basket-section"
        >
          <h5
            aria-level="2"
          >
            Select Payment Method
          </h5>
          <p
            className="d-flex flex-wrap"
          >
            <button
              className="payment-method-button active"
              type="button"
            >
              <img
                alt="Credit Card"
                src="test-file-stub"
              />
            </button>
            <button
              className="payment-method-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt="PayPal"
                src="test-file-stub"
              />
            </button>
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`<PaymentPage /> Renders correctly in various states should render the basket with an enterprise offer 1`] = `
<div
  className="page__payment container-fluid py-5"
>
  <div
    className="row"
  >
    <h1
      className="sr-only"
    >
      Payment
    </h1>
    <div
      className="col-md-5 pr-md-5 col-basket-summary"
    >
      <section
        aria-label="Shopping Cart Details"
        aria-live="polite"
        aria-relevant="all"
      >
        <div>
          <span
            className="sr-only"
          >
            Shopping cart details are loaded.
          </span>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              In Your Cart
            </h5>
            <p>
              Your purchase contains the following:
            </p>
            <div
              className="row align-items-center mb-3"
            >
              <div
                className="col-5"
              >
                <div
                  className="embed-responsive embed-responsive-16by9"
                >
                  <img
                    alt=""
                    className="img-thumbnail product-thumbnail"
                    src="https://edx.org/lekigud.gif"
                  />
                </div>
              </div>
              <div
                className="col-7"
              >
                <h6
                  aria-level="3"
                  className="m-0"
                >
                  Introduction to Pigs
                </h6>
                <p
                  className="m-0"
                >
                  Verified Certificate
                </p>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="summary-heading"
            aria-live="polite"
            className="basket-section"
            role="region"
          >
            <h5
              aria-level="2"
              id="summary-heading"
            >
              Summary
            </h5>
             
            <div
              className="summary-row d-flex"
            >
              <span
                className="flex-grow-1"
              >
                Price
              </span>
              <span>
                $158.87
              </span>
            </div>
            <div
              className="summary-row"
            >
              <p
                className="d-flex m-0"
              >
                <span
                  className="flex-grow-1"
                >
                  Discounts applied
                </span>
                <span>
                  $0.00
                </span>
              </p>
              <p
                className="m-0 text-muted"
              >
                Array [
                  "50%",
                  " discount provided by Pied Piper.",
                ]
              </p>
            </div>
            <div
              className="summary-row font-weight-bold d-flex"
            >
              <span
                className="flex-grow-1"
              >
                TOTAL
              </span>
              <span
                className="text-right"
              >
                $158.87
              </span>
            </div>
          </div>
          <div
            className="basket-section"
          >
            <h5
              aria-level="2"
            >
              Order Details
            </h5>
            <p>
              After you complete your order you will be able to select course dates from your dashboard.
            </p>
          </div>
        </div>
      </section>
    </div>
    <div
      className="col-md-7 pl-md-5"
    >
      <section
        aria-label="Payment Details"
      >
        <div
          className="basket-section"
        >
          <h5
            aria-level="2"
          >
            Select Payment Method
          </h5>
          <p
            className="d-flex flex-wrap"
          >
            <button
              className="payment-method-button active"
              type="button"
            >
              <img
                alt="Credit Card"
                src="test-file-stub"
              />
            </button>
            <button
              className="payment-method-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              <img
                alt="PayPal"
                src="test-file-stub"
              />
            </button>
          </p>
        </div>
      </section>
    </div>
  </div>
</div>
`;
